// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PcbSidebar > matches snapshot with a selected placement 1`] = `
<div>
  <div
    class="flex h-full flex-col overflow-y-auto bg-bg-secondary"
  >
    <div
      class="space-y-3 border-t border-border-default px-2 py-3 first:border-t-0"
    >
      <h3
        class="text-xs font-medium uppercase tracking-wider text-text-secondary"
      >
        PCB Setup
      </h3>
      <div
        class="space-y-3"
      >
        <div>
          <h3
            class="text-xs font-medium uppercase tracking-wider text-text-secondary"
          >
            Board Size
          </h3>
        </div>
        <div
          class="grid grid-cols-2 gap-2"
        >
          <label
            class="space-y-1"
          >
            <span
              class="text-[11px] text-text-muted"
            >
              Width (mm)
            </span>
            <input
              class="h-8 w-full rounded-md border border-border-default bg-bg-input px-2 text-xs text-text-primary outline-none"
              min="1"
              step="0.1"
              type="number"
              value="100"
            />
          </label>
          <label
            class="space-y-1"
          >
            <span
              class="text-[11px] text-text-muted"
            >
              Height (mm)
            </span>
            <input
              class="h-8 w-full rounded-md border border-border-default bg-bg-input px-2 text-xs text-text-primary outline-none"
              min="1"
              step="0.1"
              type="number"
              value="80"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      class="space-y-3 border-t border-border-default px-2 py-3 first:border-t-0"
    >
      <h3
        class="text-xs font-medium uppercase tracking-wider text-text-secondary"
      >
        Layers
      </h3>
      <div
        class="flex gap-2"
      >
        <button
          class="h-8 flex-1 rounded-md border px-2 text-xs border-border-strong bg-bg-input text-text-primary"
          type="button"
        >
          F.Cu
        </button>
        <button
          class="h-8 flex-1 rounded-md border px-2 text-xs border-border-default text-text-muted hover:bg-bg-input"
          type="button"
        >
          B.Cu
        </button>
      </div>
      <div
        class="space-y-2"
      >
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            F.Cu
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            B.Cu
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            F.SilkS
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            B.SilkS
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <div
      class="space-y-3 border-t border-border-default px-2 py-3 first:border-t-0"
    >
      <h3
        class="text-xs font-medium uppercase tracking-wider text-text-secondary"
      >
        Selection
      </h3>
      <div
        class="space-y-3 text-xs text-text-secondary"
      >
        <div
          class="space-y-1 rounded-md border border-border-default px-2 py-2"
        >
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-text-muted"
            >
              Reference
            </span>
            <span
              class="text-text-primary"
            >
              U1
            </span>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-text-muted"
            >
              Value
            </span>
            <span
              class="text-text-primary"
            >
              MCU
            </span>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-text-muted"
            >
              Layer
            </span>
            <span
              class="text-text-primary"
            >
              F.Cu
            </span>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-text-muted"
            >
              Rotation
            </span>
            <span
              class="text-text-primary"
            >
              90
              °
            </span>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span
              class="text-text-muted"
            >
              Position
            </span>
            <span
              class="text-text-primary"
            >
              12.50
              , 
              8.75
            </span>
          </div>
        </div>
        <div
          class="grid grid-cols-1 gap-2"
        >
          <button
            class="h-8 rounded-md border border-border-default px-2 text-left text-xs text-text-primary hover:bg-bg-input"
            type="button"
          >
            Rotate 90°
          </button>
          <button
            class="h-8 rounded-md border border-border-default px-2 text-left text-xs text-text-primary hover:bg-bg-input"
            type="button"
          >
            Flip to back
          </button>
          <button
            class="h-8 rounded-md border border-red-500/30 px-2 text-left text-xs text-red-300 hover:bg-red-500/10"
            type="button"
          >
            Delete component
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PcbSidebar > matches snapshot without a selection 1`] = `
<div>
  <div
    class="flex h-full flex-col overflow-y-auto bg-bg-secondary"
  >
    <div
      class="space-y-3 border-t border-border-default px-2 py-3 first:border-t-0"
    >
      <h3
        class="text-xs font-medium uppercase tracking-wider text-text-secondary"
      >
        PCB Setup
      </h3>
      <div
        class="space-y-3"
      >
        <div>
          <h3
            class="text-xs font-medium uppercase tracking-wider text-text-secondary"
          >
            Board Size
          </h3>
        </div>
        <div
          class="grid grid-cols-2 gap-2"
        >
          <label
            class="space-y-1"
          >
            <span
              class="text-[11px] text-text-muted"
            >
              Width (mm)
            </span>
            <input
              class="h-8 w-full rounded-md border border-border-default bg-bg-input px-2 text-xs text-text-primary outline-none"
              min="1"
              step="0.1"
              type="number"
              value="100"
            />
          </label>
          <label
            class="space-y-1"
          >
            <span
              class="text-[11px] text-text-muted"
            >
              Height (mm)
            </span>
            <input
              class="h-8 w-full rounded-md border border-border-default bg-bg-input px-2 text-xs text-text-primary outline-none"
              min="1"
              step="0.1"
              type="number"
              value="80"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      class="space-y-3 border-t border-border-default px-2 py-3 first:border-t-0"
    >
      <h3
        class="text-xs font-medium uppercase tracking-wider text-text-secondary"
      >
        Layers
      </h3>
      <div
        class="flex gap-2"
      >
        <button
          class="h-8 flex-1 rounded-md border px-2 text-xs border-border-strong bg-bg-input text-text-primary"
          type="button"
        >
          F.Cu
        </button>
        <button
          class="h-8 flex-1 rounded-md border px-2 text-xs border-border-default text-text-muted hover:bg-bg-input"
          type="button"
        >
          B.Cu
        </button>
      </div>
      <div
        class="space-y-2"
      >
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            F.Cu
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            B.Cu
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            F.SilkS
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
        <label
          class="flex items-center justify-between rounded-md border border-border-default px-2 py-1.5 text-xs text-text-secondary"
        >
          <span>
            B.SilkS
          </span>
          <input
            checked=""
            type="checkbox"
          />
        </label>
      </div>
    </div>
    <div
      class="space-y-3 border-t border-border-default px-2 py-3 first:border-t-0"
    >
      <h3
        class="text-xs font-medium uppercase tracking-wider text-text-secondary"
      >
        Selection
      </h3>
      <p
        class="text-xs text-text-muted"
      >
        Select a component on the PCB canvas.
      </p>
    </div>
  </div>
</div>
`;
